Fix spacing in actors line items

--- a/app/public/styles/base.css
+++ b/app/public/styles/base.css
@@ -133,3 +133,6 @@ aside li {
 section.main-actors {
   clear:both;
 }
+section.main-actors li {
+  padding: 0;
+}
